<resources>
    <string name="app_name">DragonSIS</string>

    <!--General Strings-->
    <string name="gnr_back_to_menu">Back to Menu</string>

    <!--log in-->

    <string name="log_user_hint">username</string>
    <string name="log_pass_hint">password</string>
    <string name="log_btn">Log in</string>

    <!--menu screen-->

    <string name="menu_useracc_btn">User Accounts</string>
    <string name="menu_inventory_btn">View Inventory</string>
    <string name="menu_products_btn">View Products</string>
    <string name="menu_logout_btn">Log out</string>
    <string name="menu_pdf_btn">Generate PDF Report</string>

    <!--generate pdf-->

    <string name="pdf_gen_sales">Generate Sales Report</string>
    <string name="pdf_gen_inv">Generate Inventory Report</string>
    <string name="pdf_gen_full">Generate Full Report</string>
    <string name="location">The Report PDF File can be found on the phone\'s Downloads Folder</string>
    <!--generate pdf-->


    <string name="view_inv">View Inventory</string>
    <string name="view_inv_updates">View Inventory Updates</string>
    <string name="view_product_list">View Product List</string>
    <string name="view_accs">View Accounts</string>
    <string name="view_sales">View Sales</string>
    <string name="gen_rep">Generate Report</string>
    <string name="logout">Logout</string>
    <string name="view_invupdates">View Inventory Updates</string>
    <string name="view_productlist">View Product List</string>
    <string name="backbuttondescrip">BackButton</string>
    <string name="welcome">Welcome,</string>
    <string name="user_name">User Name</string>


</resources>