<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ManagerGeneratePdfReport"
    android:orientation="vertical"
    android:gravity="center">

    <Button
        android:id="@+id/btn_gnr_sales"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pdf_gen_sales"></Button>

    <Button
        android:id="@+id/btn_gnr_inv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pdf_gen_inv"></Button>

    <Button
        android:id="@+id/btn_gnr_full"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pdf_gen_full"></Button>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gnr_back_to_menu"></Button>



</LinearLayout>