<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EmployeeMenu">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_viewinv"
            android:layout_width="260dp"
            android:layout_height="60dp"
            android:text="@string/view_inv"
            app:layout_constraintTop_toTopOf="parent"/>

        <Button
            android:id="@+id/btn_invupd"
            android:layout_width="260dp"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:text="@string/view_inv_updates"/>

        <Button
            android:id="@+id/btn_prodlist"
            android:layout_width="260dp"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:text="@string/view_product_list"/>

        <Button
            android:id="@+id/btn_log"
            android:layout_width="260dp"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:text="@string/logout" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>

