<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ManagerMenu"
    android:gravity="center"
    android:orientation="vertical">


    <Button
        android:id="@+id/btn_inventory"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:layout_marginTop="124dp"
        android:text="@string/menu_inventory_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/btn_viewinvupd"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:text="@string/view_invupdates"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_inventory"/>

    <Button
        android:id="@+id/btn_products"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:text="@string/view_productlist"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_viewinvupd"/>

    <Button
        android:id="@+id/btn_useraccounts"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:text="@string/menu_useracc_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_products"/>

    <Button
        android:id="@+id/btn_man_trans"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:text="@string/manage_transac"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_useraccounts"/>

    <Button
        android:id="@+id/btn_pdf"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:text="@string/menu_pdf_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_man_trans"/>

    <Button
        android:id="@+id/btn_logout"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:text="@string/menu_logout_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_pdf"/>

</androidx.constraintlayout.widget.ConstraintLayout>