<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ManagerGeneratePdfReport"
    android:orientation="vertical"
    android:gravity="center">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="50dp">

        <androidx.cardview.widget.CardView
            android:layout_width="300dp"
            android:layout_height="150dp"
            app:cardBackgroundColor="@color/blue_munsell"
            app:cardCornerRadius="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="25dp"
                android:text="@string/location"
                android:textSize="20sp"
                android:textColor="@color/snow"
                android:textAlignment="center"/>
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/btn_gnr_sales"
            android:layout_width="260dp"
            android:layout_height="60dp"
            android:layout_marginTop="50dp"
            android:text="@string/pdf_gen_sales"
            />

        <Button
            android:id="@+id/btn_gnr_inv"
            android:layout_width="260dp"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:text="@string/pdf_gen_inv"
            />

        <Button
            android:id="@+id/btn_gnr_full"
            android:layout_width="260dp"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:text="@string/pdf_gen_full"
            />

        <Button
            android:id="@+id/btn_back_report"
            android:layout_width="260dp"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:text="@string/gnr_back_to_menu"
            />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>